Bug 482589 - Find fails to work on 'application/javascript' page; add new official JS MIME types to list of 'text' MIME types. r=cl, sr=smorgan